# hackarithms-wordle-solver

./: .env.example  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  solver.py
app/: __init__.py
app/main/: functions.py  routes.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: index.html
